# tui-tik-tak-toe

./: .gitignore  README.md
backend/: eslint.config.mjs  openapi.yaml  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/games/: game.types.ts  games.controller.ts  games.module.ts  games.service.ts
backend/src/games/dto/: create-pvp-game.dto.ts  create-solo-game.dto.ts  join-pvp-game.dto.ts  play-move.dto.ts
frontend-tui/: ARCHITECTURE.md  Cargo.toml
frontend-tui/src/: api.rs  app.rs  main.rs  models.rs  ui.rs
